# Nob-Universe

./: .env.example  .gitignore  BUILD_SUMMARY.md  CNAME  FILE_MANIFEST.md  LICENSE  Makefile  QUICKSTART.md  README.md  docker-compose.yml  package.json  requirements.txt  server.js
.github/workflows/: ci.yml
api-server/: .dockerignore  package.json  tsconfig.json
api-server/src/: config.ts  index.ts
blender/: pen-writer.py  whiteboard-animator.py
codex/: codex-index.json
codex/entries/: Codex-Entry-001-Big-Splash.json  Codex-Entry-002-RippleSense-Engine.json  Codex-Entry-003-Emotional-Logic-Core.json  Codex-Entry-004-AFM-Snapshot.json  Codex-Entry-EGN.json  Codex-Entry-RPN.json  TEMPLATE-codex-entry.json
config/: system_config.json
data/: run_logs.json
database/: init.sql
databases/: TEMPLATE-database.json  ekeda.json  emotional-nodes.json  krj.json  nob-nodes.json  rfc-db.json  tps-db.json
docker/: api-server.Dockerfile  python-engine.Dockerfile  web-demo.Dockerfile
engines/afm/: afm-core.js
engines/emotional-logic/: emotional-gravity.js  emotional-logic-engine.js
engines/nob-translator/: translator-core.js
experiments/: exp_001_attractors.js
neural/: can_model.py
python-engine/: README.md  pyproject.toml  setup.cfg  setup.py
python-engine/app/: __init__.py  main.py
simulation/: run_pipeline.py
structural/: stage_h_graph.py
symbolic/: nz_classifier.py
ui/: app.js  index.html  styles.css
visualisation/: lambda_delta_psi_plot.html
web-demo/: .dockerignore  index.html  package.json  tsconfig.json  vite.config.ts
(+24 files in other folders)
