[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-engine"
version = "0.1.0"
description = "NOB Universe Python engine"
authors = [{name = "NOB Team"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0"
]
